@@ -4,16 +4,16 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.1.0'
-  id 'org.springframework.boot' version '2.7.15'
-  id 'org.owasp.dependencycheck' version '9.0.4'
-  id 'com.github.ben-manes.versions' version '0.42.0'
-  id 'org.sonarqube' version '3.2.0'
-  id 'info.solidsoft.pitest' version '1.9.11'
-  id 'io.freefair.lombok' version '6.5.1'
+  id 'io.spring.dependency-management' version '1.1.6'
+  id 'org.springframework.boot' version '3.3.3'
+  id 'org.owasp.dependencycheck' version '10.0.4'
+  id 'com.github.ben-manes.versions' version '0.48.0'
+  id 'org.sonarqube' version '5.1.0.4882'
+  id 'info.solidsoft.pitest' version '1.15.0'
+  id 'io.freefair.lombok' version '8.10.2'
   // If Pact version is changed, make sure serenity report works.
-  id 'au.com.dius.pact' version '4.3.12'
-  id 'net.serenity-bdd.serenity-gradle-plugin' version '3.2.3'
+  id 'au.com.dius.pact' version '4.6.14'
+  id 'net.serenity-bdd.serenity-gradle-plugin' version '4.1.14'
   id 'org.flywaydb.flyway' version '9.3.0'
 }
 
@@ -22,7 +22,7 @@ version = '0.0.1'
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(17)
+    languageVersion = JavaLanguageVersion.of(21)
   }
 }
 
@@ -106,10 +106,12 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
   // finalizedBy aggregate
 }
 
 task integration(type: Test) {
+  jvmArgs = ['-Xms512m', '-Xmx2048m']
   description = "Runs integration tests"
   group = "Verification"
   testClassesDirs = sourceSets.integrationTest.output.classesDirs
@@ -156,12 +158,12 @@ jacocoTestReport {
   reports {
     xml.required = true
     csv.required = false
-    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
 
 pitest {
-  junit5PluginVersion = '1.0.0'
+  junit5PluginVersion = '1.2.1'
   targetClasses = ['uk.gov.hmcts.reform.wataskmanagementapi.*']
   excludedClasses = [
     'uk.gov.hmcts.reform.wataskmanagementapi.taskconfiguration.config.*',
@@ -192,7 +194,7 @@ sonarqube {
   properties {
     property "sonar.projectName", "Reform :: wa-task-management-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:wa-task-management-api"
-    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/config/**," +
@@ -230,11 +232,21 @@ dependencyCheck {
   }
 }
 
+configurations.all {
+  resolutionStrategy {
+    eachDependency { DependencyResolveDetails details ->
+      if (details.requested.group == 'org.hibernate.orm' && details.requested.name == 'hibernate-core') {
+        details.useVersion '6.6.1.Final'
+      }
+    }
+  }
+}
+
 dependencyManagement {
   dependencies {
-    dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    dependency group: 'commons-io', name: 'commons-io', version: '2.17.0'
 
-    dependencySet( group: 'org.springframework.security', version: '5.8.9'){
+    dependencySet( group: 'org.springframework.security', version: '6.0.8'){
       entry 'spring-security-core'
       entry 'spring-security-acl'
       entry 'spring-security-aspects'
@@ -268,7 +280,7 @@ dependencyManagement {
       entry 'selenium-support'
     }
 
-    dependencySet(group: 'ch.qos.logback', version: '1.2.13') {
+    dependencySet(group: 'ch.qos.logback', version: '1.5.8') {
       entry 'logback-classic'
       entry 'logback-core'
     }
@@ -282,19 +294,19 @@ repositories {
 }
 
 def versions = [
-  junit         : '5.9.0',
-  junitPlatform : '1.9.2',
-  reformLogging : '6.0.1',
-  springDoc     : '1.6.15',
-  serenity      : '3.1.20',
-  gradlePitest  : '1.9.11',
-  pitest        : '1.15.0',
+  junit         : '5.11.3',
+  junitPlatform : '1.11.3',
+  reformLogging : '6.1.7',
+  springDoc     : '2.2.0',
+  serenity      : '3.4.2',
+  gradlePitest  : '1.15.0',
+  pitest        : '1.16.1',
   sonarPitest   : '0.5',
-  pactVersion   : '4.3.4',
-  logbook       : '2.6.2',
-  tomcat        : '9.0.83',
-  testcontainers: '1.17.6',
-  mapStruct     : '1.3.0.Final',
+  pactVersion   : '4.6.14',
+  logbook       : '3.9.0',
+  tomcat        : '10.1.28',
+  testcontainers: '1.20.4',
+  mapStruct     : '1.3.0.Final'
 ]
 
 ext.libraries = [
@@ -312,6 +324,7 @@ ext['snakeyaml.version'] = '2.0'
 dependencies {
   implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: versions.mapStruct
   implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: versions.mapStruct
+  implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
   annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: versions.mapStruct
 
   testImplementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: versions.mapStruct
@@ -325,62 +338,75 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
 
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '2.7.15'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.3.4'
 
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.6'
+
+  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '2.7.15') {
+    exclude group: 'net.minidev', module: 'json-smart'
+  }
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-context', version: '4.1.4'
+
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.3'
+
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
+
+  implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3.1'
 
   implementation group: 'org.springframework.security', name: 'spring-security-rsa', version: '1.1.1'
 
   implementation('org.springframework.retry:spring-retry')
 
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-webmvc-core', version: versions.springDoc
-
+  implementation group: 'org.zalando', name: 'logbook-core', version: versions.logbook
   implementation group: 'org.zalando', name: 'logbook-spring-boot-starter', version: versions.logbook
-  implementation group: 'org.zalando', name: 'problem-spring-web-starter', version: '0.26.2'
+  implementation group: 'org.zalando', name: 'logbook-httpclient5', version: versions.logbook
+  implementation group: 'org.zalando', name: 'problem-spring-web-starter', version: '0.29.1'
 
-  implementation group: 'net.minidev', name: 'json-smart', version: '2.4.10'
+  implementation group: 'net.minidev', name: 'json-smart', version: '2.5.1'
 
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.2.1'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.3.0'
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
   implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
+  implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
 
-  implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.15.Final'
-  implementation group: 'org.hibernate', name: 'hibernate-validator', version: '7.0.5.Final'
+  implementation group: 'org.hibernate', name: 'hibernate-core', version: '6.6.1.Final'
+  implementation group: 'org.hibernate', name: 'hibernate-validator', version: '8.0.1.Final'
 
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.19.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.24.2'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.24.2'
+  implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
 
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: versions.tomcat
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
 
-  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.4'
-  implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.9.1'
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.1.2'
+  implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.9.2'
 
   implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
 
-  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.15.3'
+  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.18.2'
 
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.13'
 
-  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'
 
-  // required to convert postgres to hibernate types
-  implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.21.1'
+  implementation group: 'io.hypersistence', name: 'hypersistence-utils-hibernate-63', version: '3.8.3'
 
-  implementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
+  implementation group: 'org.awaitility', name: 'awaitility', version: '4.2.2'
 
-  implementation 'com.microsoft.azure:applicationinsights-core:2.6.0'
+  implementation 'com.microsoft.azure:applicationinsights-core:2.6.4'
 
   //cache
-  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.5'
+  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
 
   testImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
   testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: versions.testcontainers
-  testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+  testImplementation group: 'com.h2database', name: 'h2', version: '2.3.232'
+  testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.14.0'
+  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.14.0'
+
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -388,9 +414,20 @@ dependencies {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
 
-  testImplementation(group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.33.2') {
-    exclude group: 'com.github.jknack.handlebars.java'
+  testImplementation(group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '3.0.1') {
+    exclude group: 'org.eclipse.jetty', module: 'jetty-server'
+    exclude group: 'org.eclipse.jetty', module: 'jetty-http'
+    exclude group: 'org.eclipse.jetty', module: 'jetty-util'
+    exclude group: 'org.eclipse.jetty', module: 'jetty-io'
+    exclude group: 'org.eclipse.jetty', module: 'jetty-security'
+    exclude group: 'org.eclipse.jetty.http2', module: 'http2-server'
   }
+  testImplementation 'org.eclipse.jetty:jetty-server:11.0.15'
+  testImplementation 'org.eclipse.jetty:jetty-http:11.0.15'
+  testImplementation 'org.eclipse.jetty:jetty-util:11.0.15'
+  testImplementation 'org.eclipse.jetty:jetty-io:11.0.15'
+  testImplementation 'org.eclipse.jetty:jetty-security:11.0.15'
+  testImplementation 'org.eclipse.jetty.http2:http2-server:11.0.15'
 
   testImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
 
@@ -405,8 +442,8 @@ dependencies {
   testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: versions.junit
 
   testImplementation group: 'com.obsidiandynamics.pojotester', name: 'core', version: '0.9.0'
-  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
-  testImplementation group: 'com.google.guava', name: 'guava-testlib', version: '32.1.2-jre'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.5'
+  testImplementation group: 'com.google.guava', name: 'guava-testlib', version: '32.1.3-jre'
 // https://mvnrepository.com/artifact/com.vladsch.flexmark/flexmark
   testCompileOnly group: 'com.vladsch.flexmark', name: 'flexmark-all', version: '0.64.8'
 
@@ -442,6 +479,7 @@ task runAndPublishConsumerPactTests(type: Test) {
   logger.lifecycle("Runs pact Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
 }
 
 runAndPublishConsumerPactTests.finalizedBy pactPublish
@@ -451,10 +489,15 @@ pact {
     pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
   }
   publish {
+    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
     pactDirectory = 'build/pacts'
     tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
     version = project.pacticipantVersion
   }
+}
+
+pactPublish {
+  pactPublish = project.pact.publish
 }
 
 task contract(type: Test) {
@@ -463,12 +506,14 @@ task contract(type: Test) {
   useJUnitPlatform()
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
 }
 
 task runProviderPactVerification(type: Test) {
   logger.lifecycle("Runs provider pact Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
   if (project.hasProperty('pact.verifier.publishResults')) {
     systemProperty 'pact.verifier.publishResults', project.property('pact.verifier.publishResults')
   }
@@ -489,7 +534,9 @@ static def getCheckedOutGitCommitHash() {
   'git rev-parse --verify --short HEAD'.execute().text.trim()
 }
 
-mainClassName = 'uk.gov.hmcts.reform.wataskmanagementapi.Application'
+application {
+  mainClass.set('uk.gov.hmcts.reform.wataskmanagementapi.Application')
+}
 
 bootJar {
   getArchiveFileName().set(provider {
